--- a/footerStyle.css
+++ b/footerStyle.css
@@ -7,7 +7,7 @@ footer {
   margin-top: 20px;
   padding: 0;
   overflow: hidden;
-  background-image: url(./dataFolder/shinkanRobocon.jpg);
+  background-image: url("./dataFolder/shinkanRobocon.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
