--- a/topPageStyle.css
+++ b/topPageStyle.css
@@ -10,7 +10,7 @@ body {
   width: 100%;
   height: 80vh;
   overflow: auto;
-  background-image: url(./dataFolder/picture_2017.png);
+  background-image: url("./dataFolder/picture_2017.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
