--- a/webPageStyle.css
+++ b/webPageStyle.css
@@ -12,7 +12,7 @@ margin: 0;
   width: 100%;
   height: 60vh;
   overflow: auto;
-  background-image: url(./dataFolder/picture_2017.png);
+  background-image: url(./dataFolder/picture_2017.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -149,7 +149,7 @@ h4 {
 .balloon_rb::after {
   content: '';
   position: absolute;
-  background-image: url(./dataFolder/Roberuta_shadow2.png);
+  background-image: url(./dataFolder/Roberuta_shadow2.jpg);
   background-size: 100px auto;
   background-repeat: no-repeat;
   width: 100px;
