--- a/webPageStyle.css
+++ b/webPageStyle.css
@@ -106,6 +106,7 @@ h4 {
   padding: 40px;
   margin-right: 260px;
   margin-left: 20px;
+  min-width: 350px;
   border-right-style: ridge;
   border-right-color: rgb(193, 180, 199);
   border-left-style: ridge;
@@ -149,7 +150,7 @@ h4 {
 .balloon_rb::after {
   content: '';
   position: absolute;
-  background-image: url(./dataFolder/Roberuta_shadow2.jpg);
+  background-image: url(./dataFolder/Roberuta_shadow2.png);
   background-size: 100px auto;
   background-repeat: no-repeat;
   width: 100px;
