--- a/tableStyle.css
+++ b/tableStyle.css
@@ -3,6 +3,7 @@ table {
   border-collapse: collapse;
   border: solid;
   border-color: rgb(167, 29, 29);
+  min-width: 350px;
 }
 
 table th {
@@ -18,8 +19,9 @@ table td {
 }
 
 .table_box {
+  float: left;
   margin: 20px;
+  margin-right: 260px;
   padding: 20px;
-  width: 80%;
   max-width: 700px;
 }
