--- a/topPageStyle.css
+++ b/topPageStyle.css
@@ -7,15 +7,18 @@ body {
 
 #header {
   position: relative;
-  width: 100%;
-  height: 80vh;
-  overflow: auto;
+  /* please change photo Regularly*/
   background-image: url("./dataFolder/picture_2017.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+ /* other setting */
+  width: 100%;
+  height: 80vh;
+  overflow: auto;
 }
 #header::before {
+  /*darken the photo*/
   content: '';
   position: absolute;
   top: 0;
@@ -31,10 +34,6 @@ body {
   padding: 0.2em 0.5em;
   line-height: 1;
   font-weight: bold;
-  /*
-  text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000;
-  text-shadow: 2px 2px 1px #000, -2px 2px 1px #000, 2px -2px 1px #000, -2px -2px 1px #000;
-  */
 }
 #header_box {
   position: absolute;
@@ -43,12 +42,14 @@ body {
 }
 #header p {
   position: absolute;
+  /* centering box */
   top: 50%;
   left: 50%;
   margin: 0;
   -ms-transform: translate(-50%,-50%);
   -webkit-transform : translate(-50%,-50%);
   transform : translate(-50%,-50%);
+  /* other settings */
   font-weight: bold;
   font-size: 30px;
   color: white;
@@ -84,7 +85,7 @@ h3 {
 .box_line {
   width: 50%;
   padding: 30px;
-  margin:0px auto;
+  margin: 0px auto;
   color: rgb(60, 63, 75);
   border-left: double 7px rgba(0, 146, 228, 0.85);
   border-right: double 7px rgba(0, 146, 228, 0.85);
@@ -98,9 +99,11 @@ h3 {
 .container_100 {
   margin:0;
   display:block;
+  /* centering box menu */
   text-align: center;
 }
 .container_100::after{
+  /* to clear floating */
   content: '';
   display: block;
   clear: both;
@@ -108,49 +111,38 @@ h3 {
 .menu_box {
   position: relative;
   display:inline-block;
+  /* background important setting  */
+  background-size: cover;
+  background-position: center;
+  /* other settings */
   margin: 0px 20px;
   padding: 0;
   width: 350px;
   height: 35vh;
-  background-size: cover;
-  border-style: solid;
-  background-position: center;
   border-top-right-radius: 20px;
 }
 .mini_box {
+  /* placing lower bottom */
   position: absolute;
-  background-color: rgba(3, 11, 78, 0.5); //Transparent color
-  width:100%;
-  height: 1.5em;
   bottom: 0;
   left: 0;
-  color: white;
+  /* font properties */
   font-size: 25px;
   text-align: center;
-  padding: 0.1em;
+  line-height: 1.5em;
+  vertical-align: middle;
+  /* other settings */
+  width:100%;
+  height: 1.5em;
+  padding: 0.1em 0;
   margin: 0;
+  overflow: hidden;
+  background-color: rgba(3, 11, 78, 0.5);
+  color: white;
 }
 .no_decoration {
   text-decoration: none;
   border-style: none;
-}
-
-.link_button {
-  font-weight: bold;
-  text-decoration: none;
-  background-color: burlywood;
-  color: white;
-  padding: 10px 10px;
-  border-radius: 20px;
-}
-
-.link_button:hover {
-  background-color: aqua;
-  text-decoration: none;
-}
-
-.link_button:visited {
-  color: gray;
 }
 
 .new_info {
@@ -158,7 +150,6 @@ h3 {
   padding: 0;
   margin: 40px auto;
   max-width: 500px;
-  /*border: solid 2px gray;*/
 }
 .new_info p{
   margin: 10px;
@@ -167,41 +158,46 @@ h3 {
 }
 .new_info ul{
   width: 100%;
+  height: 25vh;
   padding: 0;
   margin: 0;
   list-style-type: none;
   font-size: 14px;
-  height: 25vh;
   /*overflow-y: scroll;*/
   overflow-x: hidden;
 }
 .new_info li{
   display: block;
   position: relative;
+  /* vertical centering */
+  line-height: 40px;
+  vertical-align: center;
+  /* other setting */
+  border-top: solid 2px gray;
   width: 100%;
   height: 40px;
   margin: 0;
   padding: 0;
-  line-height: 40px;
-  vertical-align: center;
-  border-top: solid 2px gray;
-  /*border-bottom: solid 1px gray;*/
-  /*border-left: double 7px rgb(116, 35, 35);*/
 }
 .date {
+  /* place upper left */
   position: absolute;
   top: 0;
   left: 0;
+  /* other setting */
   width: 7em;
   text-align: center;
 }
 .info_title {
   position: absolute;
+  /* place upper left */
   top: 0;
   left: 0;
   margin: 0;
   padding: 0;
+  /* open the space for date */
   padding-left: 7em;
+  /* other setting */
   overflow: hidden;
   height: 2em;
   font-weight: bold;
