Fix Layout Destruction

--- a/topPageStyle.css
+++ b/topPageStyle.css
@@ -83,8 +83,8 @@ h3 {
 }
 
 .box_line {
-  width: 50%;
-  padding: 30px;
+  width: 800px;
+  padding: 0px;
   margin: 0px auto;
   color: rgb(60, 63, 75);
   border-left: double 7px rgba(0, 146, 228, 0.85);
