--- a/webPageStyle.css
+++ b/webPageStyle.css
@@ -30,7 +30,7 @@ margin: 0;
 
 #header p {
 	margin: 0;
-	padding: 0.2em 0.5em;
+	/* padding: 0.2em 0.5em; */
 	line-height: 1;
 	font-weight: bold;
 	/*
@@ -225,7 +225,7 @@ h4 {
 	display: inline-block;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1010px) {
 	.side_bar {
 		display: none;
 	}
