--- a/footerStyle.css
+++ b/footerStyle.css
@@ -67,6 +67,7 @@ footer address {
 #social_icons a:hover .fa-facebook{color: rgb(52, 57, 242);}
 #social_icons a:hover .fa-blogger{color: orange;}
 #social_icons a:hover .fa-github{color: black;}
+#social_icons a:hover .fa-gitlab {color: orange}
 
 .siteMap_box {
 	float: left;
