--- a/webPageStyle.css
+++ b/webPageStyle.css
@@ -12,7 +12,7 @@ margin: 0;
 	width: 100%;
 	height: 60vh;
 	overflow: auto;
-	background-image: url(./dataFolder/picture_2017.jpg);
+	background-image: url(./dataFolder/DSC_0244.JPG);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
