--- a/headerStyle.css
+++ b/headerStyle.css
@@ -42,7 +42,6 @@ header h1 a:hover {
 	height: 2em;
 }
 .bar_menu{
-    position: relative;
 	display: block;
 	line-height: 2em;
 	text-align: center;
@@ -56,13 +55,10 @@ header h1 a:hover {
 .bar_menu a{
 	color: white;
 	text-decoration: none;
-    position: absolute;
-    top: 0;
-    left: 0;
+	display: block;
     width: 100%;
     height: 100%;
 	line-height: 2em;
-	vertical-align: middle;
 	margin: 0;
 	padding: 0;
 }
