#update footer font-size 画面フィット

--- a/footerStyle.css
+++ b/footerStyle.css
@@ -38,6 +38,11 @@ footer address {
 	padding: 5px 0;
 	margin: 0;
 }
+@media (max-width: 600px) {
+	footer address {
+		font-size: 3vw;
+	}
+}
 
 #social_icons {
 	width: 100%;
@@ -77,11 +82,21 @@ footer address {
 	font-size: 20px;
 	text-align: center;
 }
+@media (max-width: 600px) {
+	.siteMap_box {
+		font-size: 3vw;
+	}
+}
 .siteMap_box p{
 	margin: 0;
 	padding: 0;
 	color: white;
 	font-size: 25px;
+}
+@media (max-width: 600px) {
+	.siteMap_box p{
+		font-size: 4vw;
+	}
 }
 .siteMap_box ul {
 	margin: 0;
@@ -90,9 +105,14 @@ footer address {
 }
 .siteMap_box li {
 	margin: 0.1em 0px;
-	margin-left:10px;
+	margin-left:7px;
 	padding: 0;
 	color: white;
+}
+@media (max-width: 600px) {
+	.siteMap_box li {
+		margin-left:1vw;
+	}
 }
 .siteMap_box a {
 	text-decoration: none;
@@ -113,12 +133,23 @@ footer address {
 	padding: 0;
 	text-align: center;
 	float: left;
+	font-size: 20px;
+}
+@media (max-width: 600px) {
+	.Qbox {
+		font-size: 3vw;
+	}
 }
 .Qbox p {
 	padding: 0;
 	margin: 0;
 	font-size: 25px;
 	color: white;
+}
+@media (max-width: 600px) {
+	.Qbox p {
+		font-size: 4vw;
+	}
 }
 .Qbox a {
 	padding: 0;
