--- a/topPageStyle.css
+++ b/topPageStyle.css
@@ -16,10 +16,11 @@ body {
 	width: 100%;
 	height: 70vh;
 	overflow: auto;
+	margin-top: 30px;
 }
 @media (max-width: 1010px) {
 	#header {
-		height: 40vh;
+		height: 40vw;
 	}
 }
 #header::before {
@@ -35,23 +36,8 @@ body {
 }
 
 #header p {
-	margin: 0;
+	position: absolute;
 	padding: 0.2em 0.5em;
-	line-height: 1;
-	font-weight: bold;
-}
-#header_box {
-	position: absolute;
-	width: 100%;
-	height: 70vh;
-}
-@media (max-width: 1010px) {
-	#header_box {
-		height: 40vh;
-	}
-}
-#header p {
-	position: absolute;
 	/* centering box */
 	top: 50%;
 	left: 50%;
@@ -61,10 +47,30 @@ body {
 	transform : translate(-50%,-50%);
 	/* other settings */
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 5vw;
 	color: white;
 	line-height: 1.5em;
 	text-align: center;
+}
+@media (max-width: 1010px) {
+	#header p{
+		top: 22vw;
+	}
+}
+#header p span{
+	font-size: 2vw;
+}
+
+
+#header_box {
+	position: absolute;
+	width: 100%;
+	height: 70vh;
+}
+@media (max-width: 1010px) {
+	#header_box {
+		height: 40vh;
+	}
 }
 
 h1 {
