--- a/webPageStyle.css
+++ b/webPageStyle.css
@@ -16,6 +16,12 @@ margin: 0;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	margin-top: 30px;
+}
+@media (max-width: 1010px) {
+	#header {
+		height: 40vw;
+	}
 }
 #header::before {
 	content: '';
@@ -28,16 +34,6 @@ margin: 0;
 	background-color: rgba(0, 0, 0, 0.3);
 }
 
-#header p {
-	margin: 0;
-	/* padding: 0.2em 0.5em; */
-	line-height: 1;
-	font-weight: bold;
-	/*
-	text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000;
-	text-shadow: 2px 2px 1px #000, -2px 2px 1px #000, 2px -2px 1px #000, -2px -2px 1px #000;
-	*/
-}
 #header_box {
 	position: absolute;
 	width: 100%;
@@ -52,10 +48,18 @@ margin: 0;
 	-webkit-transform : translate(-50%,-50%);
 	transform : translate(-50%,-50%);
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 5vw;
 	color: white;
 	line-height: 1.5em;
 	text-align: center;
+}
+@media (max-width: 1010px) {
+	#header p{
+		top: 22vw;
+	}
+}
+#header p span{
+	font-size: 2vw;
 }
 
 h1 {
