#fix mail color

--- a/footerStyle.css
+++ b/footerStyle.css
@@ -134,6 +134,7 @@ footer address {
 	text-align: center;
 	float: left;
 	font-size: 20px;
+	color: white;
 }
 @media (max-width: 600px) {
 	.Qbox {
