--- a/topPageStyle.css
+++ b/topPageStyle.css
@@ -65,12 +65,7 @@ body {
 #header_box {
 	position: absolute;
 	width: 100%;
-	height: 70vh;
-}
-@media (max-width: 1010px) {
-	#header_box {
-		height: 40vh;
-	}
+	height: 100%;
 }
 
 h1 {
@@ -139,6 +134,11 @@ h3 {
 	width: 350px;
 	height: 35vh;
 	border-top-right-radius: 20px;
+}
+@media (max-width: 850px) {
+	.menu_box {
+		width: 90%;
+	}
 }
 .mini_box {
 	/* placing lower bottom */
@@ -223,7 +223,7 @@ h3 {
 .twitter_wrap {
 	text-align: center;
 	margin: 70px 0;
-	width: 400px;
+	width: 500px;
 }
 
 @media (max-width: 600px) {
