--- a/webPageStyle.css
+++ b/webPageStyle.css
@@ -37,7 +37,7 @@ margin: 0;
 #header_box {
 	position: absolute;
 	width: 100%;
-	height: 60vh;
+	height: 100%;
 }
 #header p {
 	position: absolute;
@@ -129,16 +129,16 @@ h4 {
 }
 @media (max-width: 1010px) {
 	.content {
-		margin-right: 0px;
+		margin-right: 20px;
 	}
 }
 
 .balloon_rb {
 	position: relative;
 	max-width: 200px;
-	padding: 30px;
-	margin: 0 ;
-	margin-bottom: 20px;
+	padding: 1vw;
+	margin: 0;
+	margin-bottom: 70px;
 	text-align: center;
 	color: black;
 	border-radius: 15px;
@@ -251,7 +251,7 @@ h4 {
 }
 
 .question{
-	padding:10px;
+	padding:1vw;
 	margin:10px;
 	border-style:double;
 	border-color:aqua;
